syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

service UserService {
  rpc FindAll(Query) returns (PaginationResponse);
  rpc Create(User) returns (User);
  rpc Update(UserUpdatePayLoad) returns (User);
  rpc Block(UserBlockPayLoad) returns (User);
  rpc Unblock(User) returns (User);
}

message User {
    string id = 1;
    string email = 2;
    string password=3;
    string fullName = 4;
    bool isActive = 5;
    string phone = 6;
    string avatarUrl = 7;
    string role = 8;
    string created_at= 9;
    string updated_at= 10;
    string deleted_at= 11;
}

message Query {
    string searchKeyword =1;
    int32 page =2;
    int32 limit =3;
    string sort =4;
    bool isActive =5;
    string role =6;
}

message UserFindAll {
    string id = 1;
    string email = 2;
    string fullName = 4;
    bool isActive = 5;
    string phone = 6;
    string avatarUrl = 7;
    string role = 8;
    string created_at= 9;
    string updated_at= 10;
    string deleted_at= 11;
}
message PaginationResponse {
  repeated UserFindAll users = 1;
  int32 page =2;
  int32 limit = 3;
  int32 totalPages = 4;
  int32 totalResults = 5;
}

message UserUpdatePayLoad {
    string id =1;
    User user = 2;
}

message UserBlockPayLoad {
  string id = 1;
}