// Original file: src/proto/user.proto


export interface UserFindAll {
  'id'?: (string);
  'email'?: (string);
  'fullName'?: (string);
  'isActive'?: (boolean);
  'phone'?: (string);
  'avatarUrl'?: (string);
  'role'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}

export interface UserFindAll__Output {
  'id'?: (string);
  'email'?: (string);
  'fullName'?: (string);
  'isActive'?: (boolean);
  'phone'?: (string);
  'avatarUrl'?: (string);
  'role'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}
